[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of messages module."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-messages"
version     = "0.1.0"

[dependencies]
# crates.io
bitvec                = { workspace = true }
codec                 = { package = "parity-scale-codec", workspace = true, features = ["bit-vec"] }
impl-trait-for-tuples = { version = "0.2" }
scale-info            = { workspace = true, features = ["bit-vec"] }
serde                 = { workspace = true }

# darwinia-messages-substrate
bp-runtime = { workspace = true }

# substrate
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-core       = { workspace = true }
sp-std        = { workspace = true }

[dev-dependencies]
# crates.io
array-bytes = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"bitvec/std",
	"codec/std",
	"scale-info/std",
	"serde/std",

	# darwinia-messages-substrate
	"bp-runtime/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-std/std",
]
