[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of parachains module."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-parachains"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
# darwinia-network
bp-polkadot-core = { default-features = false, path = "../polkadot-core" }
bp-runtime       = { default-features = false, path = "../runtime" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.32" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	# darwinia-network
	"bp-polkadot-core/std",
	"bp-runtime/std",
	# paritytech
	"frame-support/std",
	"sp-core/std",
]
