[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of parachains module."
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-parachains"
version     = "0.1.0"

[dependencies]
# crates.io
codec                 = { package = "parity-scale-codec", workspace = true }
impl-trait-for-tuples = { workspace = true }
scale-info            = { workspace = true }

# darwinia-network
bp-header-chain  = { workspace = true, default-features = false }
bp-polkadot-core = { workspace = true }
bp-runtime       = { workspace = true }

# paritytech
frame-support = { workspace = true }
sp-core       = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",

	# darwinia-network
	"bp-header-chain/std",
	"bp-polkadot-core/std",
	"bp-runtime/std",
	
	# paritytech
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
