[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of Polkadot-like runtime."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-polkadot-core"
version     = "0.1.0"

[dependencies]
# crates.io
codec           = { package = "parity-scale-codec", version = "3.1", default-features = false, features = ["derive"] }
scale-info      = { version = "2.1", default-features = false, features = ["derive"] }
serde           = { version = "1.0", optional = true, features = ["derive"] }
# darwinia-network
bp-messages = { default-features = false, path = "../messages" }
bp-runtime  = { default-features = false, path = "../runtime" }
# paritytech
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
frame-system  = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-api        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-core       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-runtime    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-std        = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }
sp-version    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.36" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",
	# darwinia-network
	"bp-messages/std",
	"bp-runtime/std",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
]
