[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of Polkadot-like runtime."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-polkadot-core"
version     = "0.1.0"

[dependencies]
# crates.io
codec           = { package = "parity-scale-codec", workspace = true }
scale-info      = { workspace = true }
serde           = { workspace = true, optional = true }

# darwinia-network
bp-messages = { workspace = true }
bp-runtime  = { workspace = true }

# paritytech
frame-support = { workspace = true }
frame-system  = { workspace = true }
sp-api        = { workspace = true }
sp-core       = { workspace = true }
sp-runtime    = { workspace = true }
sp-std        = { workspace = true }
sp-version    = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"scale-info/std",
	"serde",

	# darwinia-network
	"bp-messages/std",
	"bp-runtime/std",
	
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"sp-version/std",
]
