[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives that may be used at (bridges) runtime level."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-runtime"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", version = "3.1", default-features = false }
hash-db    = { version = "0.15", default-features = false }
num-traits = { version = "0.2", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
serde      = { version = "1.0", optional = true, features = ["derive"] }
trie-db    = { version = "0.24", default-features = false }
# paritytech
frame-support    = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-system     = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-core          = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-runtime       = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-state-machine = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-std           = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-trie          = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[dev-dependencies]
# crates.io
array-bytes = { version = "4.1" }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"hash-db/std",
	"num-traits/std",
	"scale-info/std",
	"serde",
	# paritytech
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-trie/std",
	"trie-db/std",
]
