[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives that may be used at (bridges) runtime level."
edition     = "2021"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-runtime"
version     = "0.1.0"

[dependencies]
# crates.io
codec      = { package = "parity-scale-codec", workspace = true }
hash-db    = { workspace = true }
log        = { workspace = true }
num-traits = { workspace = true }
scale-info = { workspace = true }
serde      = { workspace = true }
trie-db    = { workspace = true }

# substrate
frame-support    = { workspace = true }
frame-system     = { workspace = true }
sp-core          = { workspace = true }
sp-io            = { workspace = true }
sp-runtime       = { workspace = true }
sp-state-machine = { workspace = true }
sp-std           = { workspace = true }
sp-trie          = { workspace = true }

[dev-dependencies]
# crates.io
array-bytes = { workspace = true }

[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"hash-db/std",
	"num-traits/std",
	"scale-info/std",
	"serde/std",

	# substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-state-machine/std",
	"sp-std/std",
	"sp-trie/std",
	"trie-db/std",
]
