[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "bp-test-utils"
version = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", version = "3.1", default-features = false }
ed25519-dalek    = { version = "1.0", default-features = false, features = ["u64_backend"] }
finality-grandpa = { version = "0.16", default-features = false }
# darwinia-network
bp-header-chain = { default-features = false, path = "../header-chain" }
# paritytech
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-finality-grandpa   = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-runtime            = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-std                = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }


# paritytech
[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"ed25519-dalek/std",
	"finality-grandpa/std",
	# darwinia-network
	"bp-header-chain/std",
	# paritytech
	"sp-application-crypto/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
]
