[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "bp-test-utils"
version = "0.1.0"

[dependencies]
# crates.io
codec            = { package = "parity-scale-codec", workspace = true }
ed25519-dalek    = { version = "1.0", default-features = false, features = ["u64_backend"] }
finality-grandpa = { workspace = true }

# darwinia-network
bp-header-chain = { workspace = true }

# paritytech
sp-application-crypto = { workspace = true }
sp-finality-grandpa   = { workspace = true }
sp-runtime            = { workspace = true }
sp-std                = { workspace = true }

# paritytech
[features]
default = ["std"]
std = [
	# crates.io
	"codec/std",
	"ed25519-dalek/std",
	"finality-grandpa/std",

	# darwinia-network
	"bp-header-chain/std",
	
	# paritytech
	"sp-application-crypto/std",
	"sp-finality-grandpa/std",
	"sp-runtime/std",
	"sp-std/std",
]
