[package]
authors     = ["Parity Technologies <admin@parity.io>"]
description = "Primitives of the pallet-bridge-token-swap pallet"
edition     = "2018"
license     = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name        = "bp-token-swap"
version     = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false }

# Substrate Dependencies

frame-support = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }
sp-core       = { git = "https://github.com/darwinia-network/substrate", branch = "darwinia-v0.11.7", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-core/std",
]
