[package]
name = "substrate-relay"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
anyhow = "1.0"
async-std = "1.9.0"
async-trait = "0.1.42"
codec = { package = "parity-scale-codec", version = "2.0.0" }
futures = "0.3.12"
hex = "0.4"
log = "0.4.14"
num-format = "0.4"
num-traits = "0.2"
paste = "1.0"
structopt = "0.3"

# Bridge dependencies

bp-header-chain = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-kusama = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-messages = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-polkadot = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-rialto = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-rococo = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-runtime = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bp-westend = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
bridge-runtime-common = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
finality-grandpa = { version = "0.14.0" }
finality-relay = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
headers-relay = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
messages-relay = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
pallet-bridge-dispatch = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
pallet-bridge-messages = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-kusama-client = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-polkadot-client = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-rialto-client = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-rococo-client = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-substrate-client = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-utils = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
relay-westend-client = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }
rialto-runtime = { git = "https://github.com/darwinia-network/parity-bridges-common", branch = "s2s" }

bp-millau = { git = "https://github.com/darwinia-network/darwinia-common", branch = "feature/s2s" }
relay-millau-client = { git = "https://github.com/darwinia-network/darwinia-common", branch = "feature/s2s" }
millau-runtime = { git = "https://github.com/darwinia-network/darwinia-common", branch = "feature/s2s" }

drml-primitives = { git = "https://github.com/darwinia-network/darwinia-common", branch = "feature/s2s" }
relay-pangolin-client = { git = "https://github.com/darwinia-network/darwinia-common", branch = "feature/s2s" }
pangolin-runtime = { git = "https://github.com/darwinia-network/darwinia-common", branch = "feature/s2s" }

# Substrate Dependencies

frame-support = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-core = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-finality-grandpa = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-runtime = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-trie = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
sp-version = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/darwinia-network/substrate", branch = "s2s" }
hex-literal = "0.3"
