[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name    = "substrate-relay"
version = "0.1.0"

[dependencies]
anyhow     = "1.0"
async-std  = "1.9.0"
codec      = { package = "parity-scale-codec", version = "2.2.0" }
futures    = "0.3.12"
hex        = "0.4"
log        = "0.4.14"
num-format = "0.4"
num-traits = "0.2"
paste      = "1.0"
rand       = "0.8"
structopt  = "0.3"
strum      = { version = "0.21.0", features = ["derive"] }

# Bridge dependencies

bp-header-chain               = { path = "../../primitives/header-chain" }
bp-kusama                     = { path = "../../primitives/chain-kusama" }
bp-message-dispatch           = { path = "../../primitives/message-dispatch" }
bp-messages                   = { path = "../../primitives/messages" }
bp-millau                     = { path = "../../primitives/chain-millau" }
bp-polkadot                   = { path = "../../primitives/chain-polkadot" }
bp-rialto                     = { path = "../../primitives/chain-rialto" }
bp-rialto-parachain           = { path = "../../primitives/chain-rialto-parachain" }
bp-rococo                     = { path = "../../primitives/chain-rococo" }
bp-runtime                    = { path = "../../primitives/runtime" }
bp-token-swap                 = { path = "../../primitives/token-swap" }
bp-westend                    = { path = "../../primitives/chain-westend" }
bp-wococo                     = { path = "../../primitives/chain-wococo" }
bridge-runtime-common         = { path = "../../bin/runtime-common" }
finality-relay                = { path = "../finality" }
messages-relay                = { path = "../messages" }
millau-runtime                = { path = "../../bin/millau/runtime" }
pallet-bridge-dispatch        = { path = "../../modules/dispatch" }
pallet-bridge-messages        = { path = "../../modules/messages" }
pallet-bridge-token-swap      = { path = "../../modules/token-swap" }
relay-kusama-client           = { path = "../client-kusama" }
relay-millau-client           = { path = "../client-millau" }
relay-polkadot-client         = { path = "../client-polkadot" }
relay-rialto-client           = { path = "../client-rialto" }
relay-rialto-parachain-client = { path = "../client-rialto-parachain" }
relay-rococo-client           = { path = "../client-rococo" }
relay-substrate-client        = { path = "../client-substrate" }
relay-utils                   = { path = "../utils" }
relay-westend-client          = { path = "../client-westend" }
relay-wococo-client           = { path = "../client-wococo" }
rialto-parachain-runtime      = { path = "../../bin/rialto-parachain/runtime" }
rialto-runtime                = { path = "../../bin/rialto/runtime" }
substrate-relay-helper        = { path = "../lib-substrate-relay" }

# Substrate Dependencies

frame-support   = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
pallet-balances = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-core         = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-io           = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-runtime      = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
sp-version      = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }

# Polkadot Dependencies

polkadot-parachain          = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-primitives         = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime-common     = { git = "https://github.com/paritytech/polkadot", branch = "master" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "master" }

[dev-dependencies]
finality-grandpa      = { version = "0.14.0" }
hex-literal           = "0.3"
pallet-bridge-grandpa = { path = "../../modules/grandpa" }
sp-keyring            = { git = "https://github.com/darwinia-network/substrate", tag = "darwinia-v0.11.6-1" }
tempdir               = "0.3"
